# datastar-rs

./: .gitignore  Cargo.toml
src/: compression.rs  consts.rs  elements.rs  event.rs  extract.rs  lib.rs  script.rs  signals.rs  sse.rs
tests/: concurrency.rs  extract.rs  parity.rs  router.rs  serialization.rs
