[package]
name = "datastar-axum"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "Axum-only Datastar SDK with SSE and compression"

[features]
default = ["compression"]
compression = [
    "dep:async-compression",
]
telemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
async-compression = { version = "0.4", optional = true, features = ["tokio", "brotli", "zlib", "gzip", "zstd"] }
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json", "query", "tokio"] }
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "rt", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.30", optional = true }
opentelemetry = { version = "0.29", optional = true }

[dev-dependencies]
proptest = "1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
